# lambda-calculus

./: LambdaCalculus.hs  README.md  lambda-calculus.cabal
src/: Eval.hs  LambdaCalculus.hs  Parse.hs  PrettyPrint.hs  Types.hs
test/: Test.hs
