name:                lambda-calculus
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Michael Baker
maintainer:          michaeltbaker@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable lc
  main-is:             LambdaCalculus.hs
  hs-source-dirs:      src
  build-depends:       base   == 4.6.*,
                       parsec == 3.1.3,
                       safe   == 0.3.3
